  * DhMakePerl: fix_rules() replaced with update_file_list() for updating
    examples and docs and checks for deprecated/obsolete entries in
    DhMakePerl::Config
  * when finding dist version, convert "v1.002003" as "1.2.3"
  * --directory now accepts an optional directory argument
  * document that override mechanism is not used with --refresh
  * add tests for --refresh

 -- Damyan Ivanov <dmn@debian.org>  Fri, 05 Feb 2010 09:05:25 +0200

dh-make-perl (0.63) unstable; urgency=low

  [ Brian Cassidy ]
  * Add Array::Unique to dependencies listed in Build.PL.

  [ Damyan Ivanov ]
  * Create packages with Standards-Version: 3.8.4
  * control: Standards-Version: 3.8.4 (no changes needed)
  * when checking for XS presence, ignore example/test/documentation
    directories

 -- Damyan Ivanov <dmn@debian.org>  Mon, 01 Feb 2010 12:00:11 +0200

dh-make-perl (0.62) unstable; urgency=low

  [ Damyan Ivanov ]
  * tighten matching READMEs a bit; Closes: #560165
  * while looking for docs, do not delve into SVN and GIT dirs
  * add perl (>= 5.10.1) as a preferred alternative (build) dependency to
    libmodule-corelist-perl (>= 2.14) and libtest-simple-perl (>= 0.82)
  * replace the hard-coded default to /etc/apt/sources.list with querying
    AptPkg's Config about possible sources.list files. Closes: #557961
  * call AptPkg::Config::_config->init before asking for configuration details
  * bump perl (build-) dependencies to 5.10 as we use language features not
    found in 5.8

  [ gregor herrmann ]
  * Add Provides and Replaces to lib/Debian/Control/Stanza{,/Binary}.pm.
  * Uppercase "DISCLAIMER" in generated debian/copyright to make it more
    easily visible.
  * New option "--only": update only specified file(s) in --refresh mode.
  * Update years of copyright. Sync copyright holders' list between
    debian/copyright and lib/DhMakePerl.pm.

  [ Salvatore Bonaccorso ]
  * debian/copyright: Update to revision 135 of DEP5 Format-Specification for