@@ -4,6 +4,9 @@
   May be similar to #525847
 * when ITP for the package is found, try to deduce short/long description from
   the bug report
+* get_itp() should look at http://www.debian.org/devel/wnpp/prospective (or
+  requested and being_packaged), cache the resulting hash and update the cache
+  daily
 * add new command, --trace-depends. To be used like
 
    dh-make-perl --trace-depends --cpan Foo-Bar
@@ -14,8 +17,6 @@
   Ryan52 already has a program which does this, in svn as
    ./scripts/cpan-unpackaged-deps.pl. Steal code. or wait for Ryan52
    to eventually do it himself.
-* when a dependency is not packaged, search wnpp's bugs and report if there is
-  ITP about the package
 * versioned dependencies should add the epochs too (found in
   libpoex-role-sessioninstantiation-perl, where META.yml and Build.PL
   request 'POE 1.005' which should translate to "libpoe-perl (>= 2:1.0050)")
